--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Paula Maronese UX/UI</title>
+  <title>About me</title>
   <link rel="icon" type="image/png" href="img/Favicon/favicon-32x32.png" sizes="32x32" />
   <link rel="icon" type="image/png" href="img/Favicon/favicon-16x16.png" sizes="16x16" />
   <script src="https://kit.fontawesome.com/8af5858c3f.js" crossorigin="anonymous"></script>
@@ -40,113 +40,120 @@
 
     <!--Hero-->
 
-        <div id="hero">
-        <div class="section home">
-                  <div class="container">
-                              <h1>About me.</h1>
-                                <img src="img/whiteheart.svg" alt="whiteheart" width="80" height="80">
-                    </div>
-        </div>
-
-      <div class="section">
+    <div id="hero">
+      <div class="section home">
         <div class="container">
-          <div class="row story">
-            <div class="column col-md-6">
-
-              <p>
-                My passion is coming up with creative ways to express a message, and providing solutions for complex tasks. I'm a huge fan of technology and discovering new programs that help us to make life easier. My past as an industrial designer
-                and researcher at the university gave me a unique vision of user behavior and needs.
-              </p>
-
-              <p>
-                My goal as a designer is to unify modeling my knowledge as a researcher, interface designer and industrialist to amplify my perspectives within design.
-              </p>
-
-              <a href="files/Resume.pdf" download target=”_blank”>See my resume here</a>
-            </div>
-            <div class="column col-md-6">
-              <img src="img\about\profilepic.png" class="profile" alt="My Profile">
-            </div>
-          </div>
+          <h1>I'm a designer,</h1>
+          <h5>
+            Let's make a change.
+          </h5>
         </div>
       </div>
+    </div>
 
+    <img src="img/heart.svg" alt="heart" width="80" height="80" id="heart">
+
+
+    <div class="section">
       <div class="container">
-        <img src="img\about\designprocess.png" class="img" alt="designprocess">
-      </div>
+        <div class="row story">
+          <div class="column col-md-6">
+            <p>
+              My passion is coming up with creative ways to express a message, and providing solutions for complex tasks.
+              I'm a huge fan of technology and discovering new programs that help us to make life easier.
+            </p>
+            <p>
+              My past as an industrial designer and researcher at the university gave me a unique vision of user behavior and needs.
+            </p>
 
+            <p>
+              My goal as a designer is to unify modeling my knowledge as a researcher, interface designer and industrialist to amplify my perspectives within design.
+            </p>
 
-      <div class="section">
-        <div class="container">
-          <h2>Skill & Tools</h2>
-          <div class="row">
-            <div class="col-md-4">
-              <h3>Relevant Skills</h3>
-              <ul>
-                <li>Graphic design</li>
-                <li>Industrial design</li>
-                <li>Marketing research</li>
-                <li>Social networks</li>
-                <li>Product handling</li>
-                <li>User research (Competitor SWOT Analysis, Usability Heuristics, User flow)</li>
-                <li>User Interface Design (Iterative Design, Sketching, Wireframing, Prototyping)</li>
-                <li>A / B Preference Testing</li>
-              </ul>
-            </div>
-
-            <div class="col-md-4">
-              <h3>Tools I Use</h3>
-              <ul>
-                <li>Adobe XD</li>
-                <li>Sketch</li>
-                <li>Unsplash</li>
-                <li>CorelDraw</li>
-                <li>Illustrator</li>
-              </ul>
-            </div>
-
-            <div class="coulmn col-md-4">
-              <h3>Coding</h3>
-              <ul>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JavaScript</li>
-              </ul>
-            </div>
-
+            <a href="files/Resume.pdf" download target=”_blank”>CHECK MY CV!</a>
           </div>
+
+          <div class="column col-md-6">
+            <img src="img\about\profilepic.png" class="profile" alt="My Profile">
+          </div>
+
         </div>
       </div>
+    </div>
 
-      <!-- end work/projects -->
+    <div class="container">
+    </div>
+
+
+    <div class="section" id="skills">
+        <div class="container module">
+        <h3><font size="+4">Skill & Tools:</font></h3>
+        <div class="row">
+          <div class="col-md-4">
+            <h3>Relevant Skills</h3>
+            <ul>
+              <li>Graphic design</li>
+              <li>Industrial design</li>
+              <li>Marketing research</li>
+              <li>Social networks</li>
+              <li>Product handling</li>
+              <li>User research (Competitor SWOT Analysis, Usability Heuristics, User flow)</li>
+              <li>User Interface Design (Iterative Design, Sketching, Wireframing, Prototyping)</li>
+              <li>A / B Preference Testing</li>
+            </ul>
+          </div>
+
+          <div class="col-md-4">
+            <h3>Tools I Use</h3>
+            <ul>
+              <li>Adobe XD</li>
+              <li>Sketch</li>
+              <li>Unsplash</li>
+              <li>CorelDraw</li>
+              <li>Illustrator</li>
+            </ul>
+          </div>
+
+          <div class="coulmn col-md-4">
+            <h3>Coding</h3>
+            <ul>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>JavaScript</li>
+            </ul>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
+    <!-- end work/projects -->
   </main>
 
   <!--Footer-->
   <footer>
-    <div class="container">
-      <div class="navtoggle" id="myNavtoggle">
-        <h2>Get in Touch</h2>
-        <p>
-          Did you like my work and do you want to contact me? Please do so through:
-        </p>
-
-        <!--Social Media Links-->
-        <div id="contact">
-          <div class="social">
-            <a href="mailto:paula.maronese@gmail.com" class="button emailme">Email me</a>
-          </div>
-          <div class="social">
-            <a href="https://www.linkedin.com/in/paula-maronese/" target="_blank"> <i class="icon fab fa-linkedin"></i></a>
-            <a href="https://www.facebook.com/Pau.maronese/" target="_blank"> <i class="icon fab fa-facebook-square"></i></a>
-            <a href="https://www.behance.net/paulamaronese" target="_blank"><i class="icon fab fa-behance-square"></i></a>
-          </div>
-
-          <p>Copyright Maronese Paula 2020</p>
+    <div class="container module">
+  <h1><font size="+6">Let's work together.</font>  </h1>
+      <!--Social Media Links-->
+      <div id="contact">
+        <div class="social">
+          <a href="mailto:paula.maronese@gmail.com" class="button emailme">Email me</a>
         </div>
+        <div class="social">
+          <a href="https://www.linkedin.com/in/paula-maronese/" target="_blank"> <i class="icon fab fa-linkedin"></i></a>
+          <a href="https://www.facebook.com/Pau.maronese/" target="_blank"> <i class="icon fab fa-facebook-square"></i></a>
+          <a href="https://www.behance.net/paulamaronese" target="_blank"><i class="icon fab fa-behance-square"></i></a>
+        </div>
+
+        <h2>© 2021 Paula Maronese. All rights reserved</h2>
+
+      </div>
+    </div>
   </footer>
   <!--End Footer-->
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="js/scripts.js"></script>
+
 </body>
 
 </html>
