--- a/sportapp.html
+++ b/sportapp.html
@@ -3,13 +3,13 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Paula Maronese UX/UI</title>
+  <title>Pow! Sports</title>
   <link rel="icon" type="image/png" href="img/Favicon/favicon-32x32.png" sizes="32x32" />
   <link rel="icon" type="image/png" href="img/Favicon/favicon-16x16.png" sizes="16x16" />
   <script src="https://kit.fontawesome.com/8af5858c3f.js" crossorigin="anonymous"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/stylework.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Libre+Caslon+Text:ital,wght@0,400;0,700;1,400&family=Open+Sans&display=swap" rel="stylesheet">
 
@@ -35,15 +35,34 @@
   </header>
   <!--End Header-->>
 
+  <div class="row module">
+    <div class="col-md-6 col-lg-7">
+      <img src="img/works/sportheader.png" alt"sport header">
+    </div>
+    <div class="col-md-6 col-lg-5">
+      <h5>Project description</h5>
+      <h6>Users</h6>
+      <p>For all users who want to maintain a non-sedentary life; the age range that will use it the most will be 20 to 40 years. </p>
+
+
+      <h6>Context</h6>
+      <p>I am a student and a full time worker, both from home. That, although it has a few pros (especially in winter), it has a great disadvantage, which is being sitting all day long. Far from considering myself sendentary, I love sports and
+        especially practicing new ones. I like to be on the go, but I also find motivation in knowing what I did, how long I did it, and how many calories I burned (even if I don't understand any calories, and eat at Mc'). </p>
+
+      <p>  For this reason, at this
+        moment I have an app to do sports (and see the calories), a clock that reminds me that I have to get up and another app that reminds me to drink water every hour. Finally, I feel that the options to download are endless, but that none of them
+        unites all these things that I consider essential for the proper functioning of our body, especially in times when most people are sitting in front of screens for many hours. </p>
+      <a href="files/SportCase.pdf" download target=”_blank”>Full case PDF</a>
+    </div>
+  </div>
+
 
   <!--Footer-->
   <footer>
-    <div class="container">
-      <h2>Get in Touch</h2>
-      <p>
-        Did you like my work and do you want to contact me? Please do so through:
-      </p>
-
+    <div class="container module">
+      <h1>
+        <font size="+6">Let's work together.</font>
+      </h1>
       <!--Social Media Links-->
       <div id="contact">
         <div class="social">
@@ -55,14 +74,15 @@
           <a href="https://www.behance.net/paulamaronese" target="_blank"><i class="icon fab fa-behance-square"></i></a>
         </div>
 
-        <p>Copyright Maronese Paula 2020</p>
+        <h2>© 2021 Paula Maronese. All rights reserved</h2>
+
       </div>
+    </div>
   </footer>
   <!--End Footer-->
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="js/scripts.js"></script>
 
 </body>
-
 
 </html>
