--- a/travelapp.html
+++ b/travelapp.html
@@ -3,13 +3,13 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Paula Maronese UX/UI</title>
+  <title>Must go! travel app</title>
   <link rel="icon" type="image/png" href="img/Favicon/favicon-32x32.png" "faviconimage32x32" sizes="32x32">
   <link rel="icon" type="image/png" href="img/Favicon/favicon-16x16.png" "faviconimage16x16" sizes="16x16">
   <script src="https://kit.fontawesome.com/8af5858c3f.js" crossorigin="anonymous"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/stylework.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Libre+Caslon+Text:ital,wght@0,400;0,700;1,400&family=Open+Sans&display=swap" rel="stylesheet">
 
@@ -35,15 +35,29 @@
   </header>
   <!--End Header-->
 
+  <div class="row module">
+    <div class="col-md-6 col-lg-7">
+      <img src="img/works/travelheader.png" alt"travel header">
+    </div>
+    <div class="col-md-6 col-lg-5">
+      <h5>Project description</h5>
+      <h6>Problem</h6>
+      <p>A user who recognizes himself at his young age, and with a free-attitude. More "relaxed", disorganized, with liberation ideals, someone who is not content with job stability, addicted to technology, who is enterprising, active, with very
+        marked moral values, who tend to be actively involved with movements and communities that feel that represent him/her. They are active in social media, where they organize and participate in various causes. </p>
+
+
+      <h6>Solution</h6>
+      <p>Give the user an intuitive tool, which allows them to find the areas that their favorite instagramers usually attend and save it within the app to organize their own trip. </p>
+      <a href="files/TravelCase.pdf" download target=”_blank”>Full case PDF</a>
+    </div>
+  </div>
 
   <!--Footer-->
   <footer>
-    <div class="container">
-      <h2>Get in Touch</h2>
-      <p>
-        Did you like my work and do you want to contact me? Please do so through:
-      </p>
-
+    <div class="container module">
+      <h1>
+        <font size="+6">Let's work together.</font>
+      </h1>
       <!--Social Media Links-->
       <div id="contact">
         <div class="social">
@@ -55,14 +69,15 @@
           <a href="https://www.behance.net/paulamaronese" target="_blank"><i class="icon fab fa-behance-square"></i></a>
         </div>
 
-        <p>Copyright Maronese Paula 2020</p>
+        <h2>© 2021 Paula Maronese. All rights reserved</h2>
+
       </div>
+    </div>
   </footer>
   <!--End Footer-->
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="js/scripts.js"></script>
 
 </body>
-
 
 </html>
