--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 
@@ -51,18 +52,19 @@
       </div>
     </div>
     <!--End Hero-->
+  <img src="img/heart.svg" alt="heart" width="80" height="80" id= "heart">
 
     <!--Work-->
     <div class="work" id="work">
       <div class="container">
-        <img src="img/heart.svg" alt="heart" width="120" height="120" id="heart">
+
         <h4>I'm Pau, I am Argentine and I currently live in Munich.
           I studied Industrial Design and now I have expanded my field towards UX / UI
-          ending with a specialization in Frontend for designers. </h4>
+           ending with a specialization in Frontend for designers. </h4>
 
 
 
-        <div class="row">
+        <div class="row module">
           <div class="col-md-6 col-lg-7">
             <img src="img/travelapp/travelindex.jpg" alt="Mustgo Muckup">
           </div>
@@ -72,11 +74,11 @@
               As I progressed through the course, I dabbled in various application options that we all use on a daily basis and since I have been traveling around the world for as long as I have a notion, this was one of the applications that I
               liked doing the most.
             </p>
-            <a href="travelapp.html" class="button readmore">Take a look!</a>
+ <a href="travelapp.html" class="button readmore">Take a look!</a>
           </div>
         </div>
 
-        <div class="row reverse">
+        <div class="row reverse module">
           <div class="col-md-6 col-lg-7">
             <img src="img/musicapp/musicindex.jpg" alt="Meridean Muckup">
           </div>
@@ -89,7 +91,7 @@
           </div>
         </div>
 
-        <div class="row">
+        <div class="row module">
           <div class="col-md-6 col-lg-7">
             <img src="img/summitbank/bankindex.jpg" alt="Summit Muckup">
           </div>
@@ -102,7 +104,7 @@
           </div>
         </div>
 
-        <div class="row reverse">
+        <div class="row reverse module">
           <div class="col-md-6 col-lg-7">
             <img src="img/sportapp/sportindex.jpg" alt="PowApp Muckup">
           </div>
@@ -127,12 +129,8 @@
 
   <!--Footer-->
   <footer>
-    <div class="container">
-      <h3>Get in Touch</h3>
-      <p>
-        Did you like my work and do you want to contact me? Please do so through:
-      </p>
-
+    <div class="container module">
+  <h1><font size="+6">Let's work together.</font>  </h1>
       <!--Social Media Links-->
       <div id="contact">
         <div class="social">
@@ -144,7 +142,8 @@
           <a href="https://www.behance.net/paulamaronese" target="_blank"><i class="icon fab fa-behance-square"></i></a>
         </div>
 
-        <p>Copyright Maronese Paula 2021</p>
+        <h2>© 2021 Paula Maronese. All rights reserved</h2>
+
       </div>
     </div>
   </footer>
