--- a/musicapp.html
+++ b/musicapp.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Paula Maronese UX/UI</title>
+  <title>Meridian Music</title>
   <link rel="icon" type="image/png" href="img/Favicon/favicon-32x32.png" sizes="32x32" />
   <link rel="icon" type="image/png" href="img/Favicon/favicon-16x16.png" sizes="16x16" />
   <script src="https://kit.fontawesome.com/8af5858c3f.js" crossorigin="anonymous"></script>
@@ -35,16 +35,26 @@
   </header>
   <!--End Header-->
 
-  <img src="img\musicapp\musiccase.png" class="img" alt="musiccase">
+  <div class="row module">
+    <div class="col-md-6 col-lg-7">
+      <img src="img/works/musicheader.png" alt"music header">
+    </div>
+    <div class="col-md-6 col-lg-5">
+      <h5>Project description</h5>
+      <h6>Problem</h6>
+    <p>Create in less than a month, an application that is as functional as possible, making a user selection and interviewing as many people as possible. Analyze the biggest competitors in the market, and using their strengths and weaknesses. </p>
+
+
+  <h6>Solution</h6>
+<p>Focus on a young-adult user, considering that they are the one who uses music applications the most. My role in this project involved developing the visual identity and user interface design for the smartphone. </p>
+<a href="files/MusicCase.pdf" download target=”_blank”>Full case PDF</a>
+    </div>
+  </div>
 
   <!--Footer-->
   <footer>
-    <div class="container">
-      <h2>Get in Touch</h2>
-      <p>
-        Did you like my work and do you want to contact me? Please do so through:
-      </p>
-
+    <div class="container module">
+  <h1><font size="+6">Let's work together.</font>  </h1>
       <!--Social Media Links-->
       <div id="contact">
         <div class="social">
@@ -56,14 +66,15 @@
           <a href="https://www.behance.net/paulamaronese" target="_blank"><i class="icon fab fa-behance-square"></i></a>
         </div>
 
-        <p>Copyright Maronese Paula 2021</p>
+        <h2>© 2021 Paula Maronese. All rights reserved</h2>
+
       </div>
+    </div>
   </footer>
   <!--End Footer-->
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="js/scripts.js"></script>
 
 </body>
-
 
 </html>
