--- a/summitbank.html
+++ b/summitbank.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Paula Maronese UX/UI</title>
+  <title>Summit Bank</title>
   <link rel="icon" type="image/png" href="img/Favicon/favicon-32x32.png" sizes="32x32" />
   <link rel="icon" type="image/png" href="img/Favicon/favicon-16x16.png" sizes="16x16" />
   <script src="https://kit.fontawesome.com/8af5858c3f.js" crossorigin="anonymous"></script>
@@ -35,34 +35,51 @@
   </header>
   <!--End Header-->
 
-  <main>
-    <img src="img\summitbank\bankcase.png" class="img" alt="bankcase">
+
+  <div class="row module">
+    <div class="col-md-6 col-lg-7">
+      <img src="img/works/bankheader.png" alt"bank header">
+    </div>
+    <div class="col-md-6 col-lg-5">
+      <h5>Project description</h5>
+      <h6>Problem</h6>
+      <p>This tool is for people who want to save money, quickly, for a particular reason. For example, a wedding, big trip, or new car. The users are not new to technology but do not like working with their finances. So, they require that the
+        information they receive via the tool is accessible, and clearly tells them what they can do to better save. </p>
 
 
-    <!--Footer-->
-    <footer>
-      <div class="container">
-        <h2>Get in Touch</h2>
-        <p>
-          Did you like my work and do you want to contact me? Please do so through:
-        </p>
+      <h6>Solution</h6>
+      <p>Users will utilize the tool in the period before a planned expense. During this period, they will input data when spending and receiving money so they can view accurate information on their finances and dynamic information on what they can
+        do to save more money. </p>
+      <a href="files/BankCase.pdf" download target=”_blank”>Full case PDF</a>
+    </div>
+  </div>
 
-        <!--Social Media Links-->
-        <div id="contact">
-          <div class="social">
-            <a href="mailto:paula.maronese@gmail.com" class="button emailme">Email me</a>
-          </div>
-          <div class="social">
-            <a href="https://www.linkedin.com/in/paula-maronese/" target="_blank"> <i class="icon fab fa-linkedin"></i></a>
-            <a href="https://www.facebook.com/Pau.maronese/" target="_blank"> <i class="icon fab fa-facebook-square"></i></a>
-            <a href="https://www.behance.net/paulamaronese" target="_blank"><i class="icon fab fa-behance-square"></i></a>
-          </div>
-          <p>Copyright Maronese Paula 2021</p>
+
+  <!--Footer-->
+  <footer>
+    <div class="container module">
+      <h1>
+        <font size="+6">Let's work together.</font>
+      </h1>
+      <!--Social Media Links-->
+      <div id="contact">
+        <div class="social">
+          <a href="mailto:paula.maronese@gmail.com" class="button emailme">Email me</a>
         </div>
-    </footer>
-    <!--End Footer-->
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="js/scripts.js"></script>
+        <div class="social">
+          <a href="https://www.linkedin.com/in/paula-maronese/" target="_blank"> <i class="icon fab fa-linkedin"></i></a>
+          <a href="https://www.facebook.com/Pau.maronese/" target="_blank"> <i class="icon fab fa-facebook-square"></i></a>
+          <a href="https://www.behance.net/paulamaronese" target="_blank"><i class="icon fab fa-behance-square"></i></a>
+        </div>
+
+        <h2>© 2021 Paula Maronese. All rights reserved</h2>
+
+      </div>
+    </div>
+  </footer>
+  <!--End Footer-->
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="js/scripts.js"></script>
 
 </body>
 
