--- a/musicapp.html
+++ b/musicapp.html
@@ -47,7 +47,7 @@
 
   <h6>Solution</h6>
 <p>Focus on a young-adult user, considering that they are the one who uses music applications the most. My role in this project involved developing the visual identity and user interface design for the smartphone. </p>
-<a href="files/MusicCase.pdf" download target=”_blank”>Full case PDF</a>
+<a href="files/MusicCase.pdf"  target="_blank">Full case PDF</a>
     </div>
   </div>
 
