--- a/sportapp.html
+++ b/sportapp.html
@@ -52,7 +52,7 @@
       <p>  For this reason, at this
         moment I have an app to do sports (and see the calories), a clock that reminds me that I have to get up and another app that reminds me to drink water every hour. Finally, I feel that the options to download are endless, but that none of them
         unites all these things that I consider essential for the proper functioning of our body, especially in times when most people are sitting in front of screens for many hours. </p>
-      <a href="files/SportCase.pdf" download target=”_blank”>Full case PDF</a>
+      <a href="files/SportCase.pdf" target=”_blank”>Full case PDF</a>
     </div>
   </div>
 
