--- a/summitbank.html
+++ b/summitbank.html
@@ -50,7 +50,7 @@
       <h6>Solution</h6>
       <p>Users will utilize the tool in the period before a planned expense. During this period, they will input data when spending and receiving money so they can view accurate information on their finances and dynamic information on what they can
         do to save more money. </p>
-      <a href="files/BankCase.pdf" download target=”_blank”>Full case PDF</a>
+      <a href="files/BankCase.pdf" target=”_blank”>Full case PDF</a>
     </div>
   </div>
 
