--- a/travelapp.html
+++ b/travelapp.html
@@ -48,7 +48,7 @@
 
       <h6>Solution</h6>
       <p>Give the user an intuitive tool, which allows them to find the areas that their favorite instagramers usually attend and save it within the app to organize their own trip. </p>
-      <a href="files/TravelCase.pdf" download target=”_blank”>Full case PDF</a>
+      <a href="files/TravelCase.pdf" target=”_blank”>Full case PDF</a>
     </div>
   </div>
 
