--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           <div class="col-md-6 col-lg-5">
             <h3>A sport app: Pow!</h3>
             <p>
-              One of the tasks asked me to design an app about something that represents me, I chose a sports app because I am constantly trying new ones for myself, and I always find that I am not satisfied with just one, but two or three, I would
+              For one of the task, I had to design something that represents me, I chose a sports app because I am constantly trying new ones for myself, and I always find that I am not satisfied with just one, but two or three, I would
               choose the best functions and I would bring them together, and that's what I did here.
             </p>
             <a href="sportapp.html" class="button readmore">Take a look!</a>
