--- a/summitbank.html
+++ b/summitbank.html
@@ -44,7 +44,7 @@
     <div class="col-md-6 col-lg-5">
       <h5>Project description</h5>
       <h6>Problem</h6>
-      <p>This tool is for people who want to save money, quickly, for a particular reason. For example, a wedding, big trip, or new car. The users are not new to technology but do not like working with their finances. So, they require that the
+      <p>This tool is for people who want to save money, quickly, for a particular reason. For example, a wedding, big trip, or a new car. The users are not new to technology but do not like working with their finances. So, they require that the
         information they receive via the tool is accessible, and clearly tells them what they can do to better save. </p>
 
 
