--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
     <div id="hero">
       <div class="section home">
         <div class="container">
-          <h1>I'm a designer,</h1>
+          <h1><font size="10">I'm a designer, based in Munich.</font></h1>
           <h5>
             Let's make a change.
           </h5>
