--- a/about.html
+++ b/about.html
@@ -97,9 +97,9 @@
               <li>Marketing research</li>
               <li>Social networks</li>
               <li>Product handling</li>
-              <li>User research (Competitor SWOT Analysis, Usability Heuristics, User flow)</li>
-              <li>User Interface Design (Iterative Design, Sketching, Wireframing, Prototyping)</li>
-              <li>A / B Preference Testing</li>
+              <li>User research</li>
+              <li>User Interface Design</li>
+              <li>A/B Preference Testing</li>
             </ul>
           </div>
 
