--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
     <div id="hero">
       <div class="section home">
         <div class="container">
-          <h1>I'm a designer,</h1>
+          <h1><font size="10">I'm a designer, based in Munich.</font></h1>
           <h5>
             Let's make a change.
           </h5>
@@ -52,49 +52,31 @@
     </div>
 
     <img src="img/heart.svg" alt="heart" width="80" height="80" id="heart">
-<<<<<<< HEAD
 
 
-=======
->>>>>>> 02540c93dd0c31343d06165fe0cc4ed203d780e0
     <div class="section">
       <div class="container">
         <div class="row story">
           <div class="column col-md-6">
-<<<<<<< HEAD
             <p>
               My passion is coming up with creative ways to express a message, and providing solutions for complex tasks.
               I'm a huge fan of technology and discovering new programs that help us to make life easier.
             </p>
             <p>
               My past as an industrial designer and researcher at the university gave me a unique vision of user behavior and needs.
-=======
-
-            <p>
-              My passion is coming up with creative ways to express a message, and providing solutions for complex tasks. I'm a huge fan of technology and discovering new programs that help us to make life easier.
-</p>
-<p>
-               My past as an industrial designer and researcher at the university gave me a unique vision of user behavior and needs.
->>>>>>> 02540c93dd0c31343d06165fe0cc4ed203d780e0
             </p>
 
             <p>
               My goal as a designer is to unify modeling my knowledge as a researcher, interface designer and industrialist to amplify my perspectives within design.
             </p>
 
-            <a href="files/Resume.pdf" target=”_blank”>CHECK MY CV!</a>
+            <a href="files/Resume.pdf" target="_blank">CHECK MY CV!</a>
           </div>
-<<<<<<< HEAD
 
           <div class="column col-md-6">
             <img src="img\about\profilepic.png" class="profile" alt="My Profile">
           </div>
 
-=======
-          <div class="column col-md-6">
-            <img src="img\about\profilepic.png" class="profile" alt="My Profile">
-          </div>
->>>>>>> 02540c93dd0c31343d06165fe0cc4ed203d780e0
         </div>
       </div>
     </div>
@@ -103,15 +85,9 @@
     </div>
 
 
-<<<<<<< HEAD
     <div class="section" id="skills">
         <div class="container module">
         <h3><font size="+4">Skill & Tools:</font></h3>
-=======
-    <div class="section" id= "skills">
-      <div class="container">
-        <h3>Skill & Tools</h3>
->>>>>>> 02540c93dd0c31343d06165fe0cc4ed203d780e0
         <div class="row">
           <div class="col-md-4">
             <h3>Relevant Skills</h3>
@@ -121,11 +97,10 @@
               <li>Marketing research</li>
               <li>Social networks</li>
               <li>Product handling</li>
-              <li>User research (Competitor SWOT Analysis, Usability Heuristics, User flow)</li>
-              <li>User Interface Design (Iterative Design, Sketching, Wireframing, Prototyping)</li>
-              <li>A / B Preference Testing</li>
+              <li>User research</li>
+              <li>User Interface Design</li>
+              <li>A/B Preference Testing</li>
             </ul>
-<<<<<<< HEAD
           </div>
 
           <div class="col-md-4">
@@ -148,30 +123,6 @@
             </ul>
           </div>
 
-=======
-          </div>
-
-          <div class="col-md-4">
-            <h3>Tools I Use</h3>
-            <ul>
-              <li>Adobe XD</li>
-              <li>Sketch</li>
-              <li>Unsplash</li>
-              <li>CorelDraw</li>
-              <li>Illustrator</li>
-            </ul>
-          </div>
-
-          <div class="coulmn col-md-4">
-            <h3>Coding</h3>
-            <ul>
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>JavaScript</li>
-            </ul>
-          </div>
-
->>>>>>> 02540c93dd0c31343d06165fe0cc4ed203d780e0
         </div>
       </div>
     </div>
@@ -182,17 +133,11 @@
   <!--Footer-->
   <footer>
     <div class="container module">
-<<<<<<< HEAD
   <h1><font size="+6">Let's work together.</font>  </h1>
-=======
-      <h1>Let's work together.</h1>
-
->>>>>>> 02540c93dd0c31343d06165fe0cc4ed203d780e0
       <!--Social Media Links-->
       <div id="contact">
         <div class="social">
           <a href="mailto:paula.maronese@gmail.com" class="button emailme">Email me</a>
-<<<<<<< HEAD
         </div>
         <div class="social">
           <a href="https://www.linkedin.com/in/paula-maronese/" target="_blank"> <i class="icon fab fa-linkedin"></i></a>
@@ -201,16 +146,6 @@
         </div>
 
         <h2>© 2021 Paula Maronese. All rights reserved</h2>
-=======
-        </div>
-        <div class="social">
-          <a href="https://www.linkedin.com/in/paula-maronese/" target="_blank"> <i class="icon fab fa-linkedin"></i></a>
-          <a href="https://www.facebook.com/Pau.maronese/" target="_blank"> <i class="icon fab fa-facebook-square"></i></a>
-          <a href="https://www.behance.net/paulamaronese" target="_blank"><i class="icon fab fa-behance-square"></i></a>
-        </div>
-
-        <h2>© 2021 Paula Maronese.       All rights reserved</h2>
->>>>>>> 02540c93dd0c31343d06165fe0cc4ed203d780e0
 
       </div>
     </div>
@@ -218,12 +153,7 @@
   <!--End Footer-->
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="js/scripts.js"></script>
-<<<<<<< HEAD
 
 </body>
-=======
->>>>>>> 02540c93dd0c31343d06165fe0cc4ed203d780e0
 
-  </body>
-
-  </html>
+</html>
