--- a/about.html
+++ b/about.html
@@ -145,7 +145,7 @@
           <a href="https://www.behance.net/paulamaronese" target="_blank"><i class="icon fab fa-behance-square"></i></a>
         </div>
 
-        <h2>© 2021 Paula Maronese. All rights reserved</h2>
+        <h2>© 2021 Paula Maronese. All rights reserved</h2> <a href="files/impressum.pdf" target="_blank">Impressum</a>
 
       </div>
     </div>
