--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
               My goal as a designer is to unify modeling my knowledge as a researcher, interface designer and industrialist to amplify my perspectives within design.
             </p>
 
-            <a href="files/Resume.pdf" target="_blank">CHECK MY CV!</a>
+            <a href="files/Resume.pdf.pdf" target="_blank">CHECK MY CV!</a>
           </div>
 
           <div class="column col-md-6">
